--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "csurf": "^1.11.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-rate-limit": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.2",
     "reflect-metadata": "^0.2.1",
