--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-rate-limit": "^7.2.0",
+    "google-libphonenumber": "^3.2.34",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.2",
     "nodemailer": "^6.9.13",
@@ -34,6 +35,7 @@
     "@types/cors": "^2.8.17",
     "@types/csurf": "^1.11.5",
     "@types/express": "^4.17.21",
+    "@types/google-libphonenumber": "^7.4.30",
     "@types/node": "^20.11.28",
     "@types/nodemailer": "^6.4.14",
     "@types/uuid": "^9.0.8",
